--- a/blocks/section-work-up/css.css
+++ b/blocks/section-work-up/css.css
@@ -8,7 +8,7 @@
 }
 .cell {
 	margin-left: 20px;
-	margin-bottom: 70px;
+	padding-bottom: 70px;
 	margin-right: 20px;
 	display: -webkit-box;
 	display: -ms-flexbox;
